--- a/prac/src/App.css
+++ b/prac/src/App.css
@@ -14,8 +14,9 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: aliceblue;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +36,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.hellodiv {
+  color: darkkhaki;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
